Update to webpack build.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,7 +2,7 @@
 
 // import all of the foundation mixins, but none of the actual code
 // this is coming from node_modules/foundation-sites/scss/foundation.scss
-@import 'foundation';
+@import '../../../node_modules/foundation-sites/scss/foundation';
 
 // These will actually import the foundation elements code
 
