--- a/resources/assets/sass/layouts/_panel.scss
+++ b/resources/assets/sass/layouts/_panel.scss
@@ -14,6 +14,11 @@ body {
   right: 0;
 }
 
+#lk-app {
+  min-height: 100%;
+  width: 100%;
+}
+
 .lk-topbar {
 
   .top-bar {
@@ -62,7 +67,6 @@ body {
   flex-direction: column;
   flex: 5;
   overflow-y: scroll;
-  padding: 0 15px;
 }
 
 
