--- a/resources/assets/sass/layouts/_panel.scss
+++ b/resources/assets/sass/layouts/_panel.scss
@@ -46,6 +46,7 @@ body {
   overflow-y: scroll;
   max-width: 220px;
   border-right: 1px solid $light-gray;
+  padding-bottom: 60px;
 }
 
 .lk-sidebar-branding {
@@ -67,6 +68,7 @@ body {
   flex-direction: column;
   flex: 5;
   overflow-y: scroll;
+  padding-bottom: 60px;
 }
 
 
