--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,8 +1,8 @@
-#screenshots img {
+.screenshots img {
     margin-left: 50px;
     max-width: 80%;
 }
 
-#screenshots .row:not(:first-child) {
+.screenshots .row:not(:first-child) {
     margin-bottom: 50px;
 }
