--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 10px;
     left: 10px;
-    display: hidden;
+    display: none;
     border: 3px solid #848484;
 }
 
